[package]
name = "beancount-parser"
version = "2.2.1"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.65"
description = "A beancount file parser library for rust"
repository = "https://github.com/jcornaz/beancount-parser"
categories = ["parser-implementations"]
keywords = ["parsing", "beancount", "accounting"]

[badges.maintenance]
status = "passively-maintained"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Public
miette = { version = "5", optional = true }

# Private
nom = { version = "7", default-features = false, features = ["std"] }
nom_locate = { version = "4", default-features = false }
thiserror = "2"

[dev-dependencies]
criterion = "0.7"
rstest = { version = "0.26", default-features = false }
rust_decimal = { version = "1", default-features = false }
miette = { version = "5", features = ["fancy"] }
chumsky = "0.11"

[lints.rust]
unsafe_code = "deny"
private_interfaces = "deny"
private_bounds = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "balance"
required-features = ["miette"]
