[package]
name = "beancount-parser"
version = "2.5.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.68"
description = "A beancount file parser library for rust"
repository = "https://github.com/jcornaz/beancount-parser"
categories = ["parser-implementations"]
keywords = ["parsing", "beancount", "accounting"]

[badges.maintenance]
status = "passively-maintained"

[dependencies]
# Public
miette = { version = "5", optional = true }

# Private
nom = { version = "8", default-features = false, features = ["std"] }
nom_locate = { version = "5", default-features = false }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
rust_decimal = { version = "1", default-features = false }

[lints.rust]
unsafe_code = "deny"
private_interfaces = "deny"
private_bounds = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
